--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="address">Address</string>
+    <string name="aber">ABER</string>
+    <string name="login">Login</string>
+    <string name="forgot_your_password">Forget password</string>
 </resources>
