--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -54,6 +54,11 @@
     <string name="vehicle_heading">Xin vui lòng nhập thông tin phương tiện . \nBạn có thể chỉnh sửa những thông tin này sau trong ứng dụng.</string>
     <string name="Sos_heading">Xin vui lòng nhập thông tin liên lạc khẩn cấp. \nBạn có thể chia sẻ vị trí trực tiếp và thông tin tài xế khi kích hoạt tính năng SOS. \nBạn có thể bỏ qua bước này và chỉnh sửa trong ứng dụng sau.</string>
     <string name="Account_heading">Please enter an unique Email and enter a password to create a new account.</string>
+    <string name="settings">Cài Đặt</string>
+
+    <!-- Profile Settings    -->
+    <string name="Language">Ngôn Ngữ</string>
+    <string name="theme">Chế Độ Tối</string>
 
     <!-- Forget Password    -->
     <string name="find_your_email">Find your email</string>
@@ -69,7 +74,8 @@
     <string name="sent">Sent</string>
 
     <string name="edit">Edit</string>
-
+    <string name="english">English</string>
+    <string name="Vietnamese">Tiếng Việt</string>
 
 
 </resources>
