--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -96,6 +96,7 @@
     <string name="booking_successful">Booking Successful</string>
     <string name="select_an_address">Select An Address</string>
     <string name="booking">Booking</string>
+    <string name="or_continue_with">Hoặc </string>
 
 
 </resources>
