--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string name="booking_successful">Booking Successful</string>
     <string name="select_an_address">Select An Address</string>
     <string name="booking">Booking</string>
+    <string name="or_continue_with">Or </string>
 
 
 </resources>
